Fixed sorting issue in tests
Signed-off-by: David SARTORI <david.sartori_externe@rte-france.com>